# Copyright (c) 2018: Oleksandr Kuznietsov <github@teivaz.com>
# Distributed under the terms of the GNU GPLv3 License.The full license
# is in the file LICENSE, distributed as part of this software.

cmake_minimum_required(VERSION 3.10.0)

set(PROJ_NAME chenv)

add_subdirectory(gtest)
add_subdirectory(chenv)
